base/02-extern/06-plex/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex-deploy
  namespace: plex
  labels:
    environment: extern
    app: plex
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plex
  template:
    metadata:
      labels:
        app: plex
    spec:
      hostNetwork: true
      volumes:
        - name: vol
          nfs:
            server: 192.168.213.2
            path: /mnt/data/plex
        - name: media
          nfs:
            server: 192.168.213.2
            path: /mnt/main
      containers:
        - name: plex
          image: linuxserver/plex
          volumeMounts:
            - name: vol
              mountPath: /config
            - name: vol
              mountPath: /data
            - name: media
              mountPath: /data/media
#          ports:
#            - containerPort: 32400
#              name: web-ui
#            - containerPort: 32469
#              name: one
#            - containerPort: 5353
#              name: two
#            - containerPort: 1900
#              name: tree
