base/02-extern/06-plex/ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: plex-https
  namespace: plex
  labels:
    environment: extern
    app: plex
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`plex.domain.tld`)
      kind: Rule
      services:
        - name: plex-service
          port: 32400
      middlewares:
        - name: headers
          namespace: traefik
  tls:
    certResolver: default
    options:
      name: tls
      namespace: traefik
